Align issues icon in main toolbar with other icons
The issues icon currently has a random 1px margin-top, which makes it
unaligned with other icons.

R=wolfi@chromium.org

Bug:344849332
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5619592
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -75,7 +75,6 @@ devtools-issue-counter.toolbar-item {
 }
 
 devtools-issue-counter.main-toolbar {
-  margin-top: 1px;
   margin-left: 1px;
   margin-right: 1px;
 }
